--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,17 @@
 web:
   build: .
   command: bundle exec rackup --host 0.0.0.0 -p 3000
+  links:
+    - db
   volumes:
     - .:/usr/src/app
   volumes_from:
     - bundle
   ports:
     - "3000:3000"
+
+db:
+  image: klaemo/couchdb
 
 bundle:
   image: busybox
